Fixes error of app crashing when P2P app opens and showing the home screen of the app

--- a/p2playstore/src/main/res/layout/activity_main.xml
+++ b/p2playstore/src/main/res/layout/activity_main.xml
@@ -5,6 +5,6 @@
     android:id="@+id/main"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".MainActivity">
+    tools:context=".P2PMainActivity">
 
 </androidx.constraintlayout.widget.ConstraintLayout>
